<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ProdutosDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/activity_produtos_details_image"
                android:src="@drawable/ic_search"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:onClick="dispatchTakePictureIntent"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtProdutoDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/produtos_details_descricao"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/activity_produtos_details_txtInputLayoutBarCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/activity_produtos_details_scanBarCode">

                    <EditText
                        android:id="@+id/txtProdutoCodBarras"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/produtos_details_codBarras"
                        android:inputType="number"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/activity_produtos_details_scanBarCode"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_search"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBottom="@id/activity_produtos_details_txtInputLayoutBarCode"
                    android:onClick="scanBarCode"
                    />
            </RelativeLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinnerProdutoUnidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="8dp"
                android:hint="@string/produtos_details_unidade"
                app:met_floatingLabel="normal" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/txtProdutoRsCompra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/produtos_details_RsCompra"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/txtProdutoRsVenda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/produtos_details_RsVenda"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>




        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>