<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PrincipalActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:backgroundTint="@color/colorBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/side_nav_bar">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="VENDAS"
                    android:textAlignment="center"
                    android:textAppearance="@style/cardTitle" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorBackground"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="15dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/card_venda_dia"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/activity_principal_mes_descricao"
                        app:layout_constraintVertical_bias="0.453" />

                    <TextView
                        android:id="@+id/activity_principal_dia_qtd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/card_venda_dia_quant"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.033"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/activity_principal_mes_qtd"
                        app:layout_constraintVertical_bias="0.658" />

                    <TextView
                        android:id="@+id/activity_principal_dia_valor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/card_venda_dia_valor"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.926"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/activity_principal_mes_valor"
                        app:layout_constraintVertical_bias="0.658" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="70dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/round_outline"
                        android:cropToPadding="false"
                        android:scaleType="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_venda" />

                    <TextView
                        android:id="@+id/activity_principal_mes_descricao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/card_venda_mes"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.501"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.34" />

                    <TextView
                        android:id="@+id/activity_principal_mes_qtd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/card_venda_mes_quant"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.033"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/activity_principal_mes_valor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/card_venda_mes_valor"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.927"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </android.support.v7.widget.CardView>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_venda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_fab_venda"
        android:onClick="openVendasActivity"
    />

</android.support.design.widget.CoordinatorLayout>